--- a/Tuan01/index9.html
+++ b/Tuan01/index9.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>File audio mp3</h1>
-    <audio controls src="https://zingmp3.vn/bai-hat/TINH-DAU-QUA-CHEN-feat-Quang-Hung-MasterD-Negav-Phap-Kieu-Erik-ANH-TRAI-SAY-HI-Quang-Hung-MasterD-Negav-Phap-Kieu-ERIK/Z7BZBE7E.html"></audio>
+    <audio controls src="audio/nhac_pixabay.mp3"></audio>
 </body>
 </html>
