add hover index9.html Lab0506

--- a/Tuan03/Lab_05_06/index10.html
+++ b/Tuan03/Lab_05_06/index10.html
@@ -69,6 +69,9 @@
         .lienhe{
             grid-area: lienhe;
         }
+        img:hover{
+            transform: scale(1.05);
+        }
     </style>
 </head>
 <body>
