--- a/Tuan06/JS.html
+++ b/Tuan06/JS.html
@@ -34,6 +34,12 @@ check pass: ^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$ -->
     <button id="btnpass">Check pass</button>
     <span id="kqpass"></span>
 
+<!-- 3. Kiểm tra để người dùng có thể nhập hợp lệ ((DD-MM-YYYY) hoặc (DD/MM/YYYY)) -->
+    <h2>Check date</h2>
+    <input id="inputdate" type="text" placeholder="DD-MM-YYYY or DD/MM/YYYY">
+    <button id="btndate">Check date</button>
+    <span id="kqdate"></span>
+
 
 
     <script>
@@ -68,6 +74,23 @@ check pass: ^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$ -->
             } else {
                 kqpass.innerText = "please input again";
                 kqpass.className = "error";
+            }
+        }
+
+        // Cau 3
+        var inputdate = document.getElementById("inputdate");
+        var btndate = document.getElementById("btndate");
+        var kqdate = document.getElementById("kqdate");
+        var ktdate = /^(?:(?:31(\/|-|\.)(?:0?[13578]|1[02]))\1|(?:(?:29|30)(\/|-|\.)(?:0?[1,3-9]|1[0-2])\2))(?:(?:1[6-9]|[2-9]\d)?\d{2})$|^(?:29(\/|-|\.)0?2\3(?:(?:(?:1[6-9]|[2-9]\d)?(?:0[48]|[2468][048]|[13579][26])|(?:(?:16|[2468][048]|[3579][26])00))))$|^(?:0?[1-9]|1\d|2[0-8])(\/|-|\.)(?:(?:0?[1-9])|(?:1[0-2]))\4(?:(?:1[6-9]|[2-9]\d)?\d{2})$/;
+
+        btndate.onclick = function() {
+            var checkdate = ktdate.test(inputdate.value);
+            if (checkdate) {
+                kqdate.innerText = "OK";
+                kqdate.className = "success";
+            } else {
+                kqdate.innerText = "please input again";
+                kqdate.className = "error";
             }
         }
     </script>
